--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -295,11 +295,13 @@ html {
 }
 
 .section-heading {
-    text-align: center;
     padding: 40px 30px;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .section-heading h2 {
+    text-align: center;
     font-size: 32px;
     font-weight: 700;
     color: #fff;
@@ -317,6 +319,8 @@ html {
     font-size: 16px;
     color: #fff;
     letter-spacing: 0.5px;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 
@@ -367,17 +371,21 @@ button:hover {
     margin-top: 30px;
     padding-top: 30px;
     border-top: 2px solid rgba(250, 250, 250, 0.1);
+    text-align: justify;
+    text-justify: inter-word;
 }
 .left-image-post {
     margin-top: 30px;
     padding-top: 30px;
     border-top: 2px solid rgba(250, 250, 250, 0.1);
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 
 .left-image img,
 .right-image img {
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .right-image-post h4,
